--- a/index.html
+++ b/index.html
@@ -1,12 +1,226 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Réservia - Trouvez le meilleur hébergement et des activités pour vos vacances</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+        Réservia - Trouvez le meilleur hébergement et des activités pour vos
+        vacances
+    </title>
+    <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
+    <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <header>
+            <div class="navbar">
+                <a class="brand" href="">
+                    <img src="assets/images/logo/Reservia.svg" alt="Logo du site Reservia" />
+                </a>
+                <nav class="main-nav">
+                    <a href="">Hébergements</a>
+                    <a href="">Activités</a>
+                </nav>
+                <a href="">S'inscrire</a>
+            </div>
+
+        </header>
+        <main>
+            <h1>
+                Trouvez votre hébergement pour des vacances de rêve
+                <span>en plein centre ville ou en pleine nature</span>
+            </h1>
+            <form>
+                <i class="fa fa-map-marker"></i>
+                <input class="city" type="search" placeholder="Marseille, France" />
+                <button>Search</button>
+            </form>
+            <div>
+                Filtres
+                <span><i class="fas fa-money-bill-wave"></i>économique</span>
+                <span><i class="fas fa-child"></i>familial</span>
+                <span><i class="fas fa-heart"></i>romantique</span>
+                <span><i class="fas fa-dog"></i>animaux autorisés</span>
+            </div>
+            <p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+
+            <!-- Hébergements / Lodging -->
+            <div class="bloc">
+                <h2>Hébergements à Marseille</h2>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Auberge la Cannebière</h3>
+                    <p>Nuit à partir de <span class="low-price">25€</span></p>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </span>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Hôtel du port</h3>
+                    <p>Nuit à partir de <span>52€</span></p>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Hôtel Les mouettes</h3>
+                    <p>Nuit à partir de <span>76€</span></p>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </span>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Hôtel de la mer</h3>
+                    <p>Nuit à partir de <span>46€</span></p>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </span>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Auberge Le Panier</h3>
+                    <p>Nuit à partir de <span class="low-price">23€</span></p>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </span>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Hôtel chez Amina</h3>
+                    <p>Nuit à partir de <span>96€</span></p>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                </div>
+                <button>Afficher plus</button>
+            </div>
+
+            <!-- Populaire / Popular -->
+            <div class="bloc">
+                <h2>Les plus populaires</h2>
+                <i class="fas fa-chart-line"></i></i>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Hôtel Le soleil du matin</h3>
+                    <p>Nuit à partir de <span>128€</span></p>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                    <p>Nuit à partir de <span>71€</span></p>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </span>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Hôtel Tout bleu et Blanc</h3>
+                    <p>Nuit à partir de <span>68€</span></p>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </span>
+                </div>
+            </div>
+
+            <!-- Activités / Activities -->
+            <div class="bloc">
+                <h2>Activités à Marseille</h2>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Vieux Port</h3>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Fort de Pomègues</h3>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Iles du Frioul</h3>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Parc National des Calanques</h3>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Notre-Dame-de-la-Garde</h3>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3>Parc Longchamp</h3>
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            <div class="navbar-btm">
+                <h2>A propos</h2>
+                <nav class="scd-nav">
+                    <a href="">Fonctionnement du site</a>
+                    <a href="">Conditions générales de vente</a>
+                    <a href="">Données et confidentialité</a>
+                </nav>
+            </div>
+            <div class="navbar-btm">
+                <h2>Nos hébergements</h2>
+                <nav class="scd-nav">
+                    <a href="">Charte qualité</a>
+                    <a href="">Soumettre votre hôtel</a>
+                </nav>
+            </div>
+            <div class="navbar-btm">
+                <h2>Assistance</h2>
+                <nav class="scd-nav">
+                    <a href="">Centre d'aide</a>
+                    <a href="">Nous contacter</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
