--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
                 <a href="#lodging">Hébergements</a>
                 <a href="#activities">Activités</a>
             </nav>
-            <a href="">S'inscrire</a>
+            <a id="subscribe" href="">S'inscrire</a>
         </div>
 
         <div class="banner">
             <h1>
                 Trouvez votre hébergement pour des vacances de rêve
-                <span>en plein centre ville ou en pleine nature</span>
+                <div>En plein centre ville ou en pleine nature</div>
             </h1>
             <form>
                 <i class="fas fa-map-marker-alt clr-black"></i>
                 <input class="city" type="search" placeholder="Marseille, France" aria-label="Rechercher une ville"/>
                 <button type="button" class="search">Rechercher</button>
+                <button type="button" class="search-icon"><i class="fas fa-search fa-lg"></i></button>
             </form>
             <div class="tags">
                 <h2>Filtres</h2>
