loging mobile first + changed imgs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </h1>
             <form>
                 <i class="fas fa-map-marker-alt clr-black"></i>
-                <input class="city" type="search" placeholder="Marseille, France" aria-label="Rechercher une ville"/>
+                <input class="city" type="search" placeholder="Marseille, France" aria-label="Rechercher une ville" />
                 <button type="button" class="search">Rechercher</button>
                 <button type="button" class="search-icon"><i class="fas fa-search fa-lg"></i></button>
             </form>
@@ -62,15 +62,18 @@
                                 <img src="/assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                     alt="Chambre de l'auberge la Cannebière">
                             </div>
-                            <h3>Auberge la Cannebière</h3>
-                            <p>Nuit à partir de <span class="low-price">25€</span></p>
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </span>
+                            <div class="text-wrapper">
+
+                                <h3>Auberge la Cannebière</h3>
+                                <p>Nuit à partir de <span class="low-price">25€</span></p>
+                                <span>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star star-empty"></i>
+                                </span>
+                            </div>
                         </a>
                     </div>
                     <div class="card card-city">
@@ -79,15 +82,18 @@
                                 <img src="/assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                     alt="Chambre de l'Hôtel du port">
                             </div>
-                            <h3>Hôtel du port</h3>
-                            <p>Nuit à partir de <span>52€</span></p>
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </span>
+                            <div class="text-wrapper">
+
+                                <h3>Hôtel du port</h3>
+                                <p>Nuit à partir de <span>52€</span></p>
+                                <span>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </span>
+                            </div>
                         </a>
                     </div>
                     <div class="card card-city">
@@ -96,15 +102,18 @@
                                 <img src="/assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                     alt="Chambre de l'hôtel Les mouettes">
                             </div>
-                            <h3>Hôtel Les mouettes</h3>
-                            <p>Nuit à partir de <span>76€</span></p>
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </span>
+                            <div class="text-wrapper">
+
+                                <h3>Hôtel Les mouettes</h3>
+                                <p>Nuit à partir de <span>76€</span></p>
+                                <span>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star star-empty"></i>
+                                </span>
+                            </div>
                         </a>
                     </div>
                     <div class="card card-city">
@@ -113,15 +122,18 @@
                                 <img src="/assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                     alt="Chambre de l'Hôtel de la mer">
                             </div>
-                            <h3>Hôtel de la mer</h3>
-                            <p>Nuit à partir de <span>46€</span></p>
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </span>
+                            <div class="text-wrapper">
+
+                                <h3>Hôtel de la mer</h3>
+                                <p>Nuit à partir de <span>46€</span></p>
+                                <span>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star star-empty"></i>
+                                    <i class="fas fa-star star-empty"></i>
+                                </span>
+                            </div>
                         </a>
                     </div>
                     <div class="card card-city">
@@ -130,15 +142,18 @@
                                 <img src="/assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                     alt="Chambre de l'auberge Le Panier">
                             </div>
-                            <h3>Auberge Le Panier</h3>
-                            <p>Nuit à partir de <span class="low-price">23€</span></p>
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </span>
+                            <div class="text-wrapper">
+
+                                <h3>Auberge Le Panier</h3>
+                                <p>Nuit à partir de <span class="low-price">23€</span></p>
+                                <span>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star star-empty"></i>
+                                </span>
+                            </div>
                         </a>
                     </div>
                     <div class="card card-city">
@@ -147,15 +162,18 @@
                                 <img src="/assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                     alt="Chambre de l'hôtel Amina">
                             </div>
-                            <h3>Hôtel chez Amina</h3>
-                            <p>Nuit à partir de <span>96€</span></p>
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </span>
+                            <div class="text-wrapper">
+
+                                <h3>Hôtel chez Amina</h3>
+                                <p>Nuit à partir de <span>96€</span></p>
+                                <span>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </span>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -167,57 +185,63 @@
                 <h2>Les plus populaires <i class="fas fa-chart-line clr-black"></i></h2>
 
                 <div class="cards">
-                    <div class="card card-popular">
-                        <a href="">
+                    <a href="">
+                        <div class="card card-popular">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                <img src="/assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                     alt="Chambre de l'hôtel Le soleil du matin">
                             </div>
-                            <h3>Hôtel Le soleil du matin</h3>
-                            <p>Nuit à partir de <span>128€</span></p>
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="card card-popular">
-                        <a href="">
+                            <div class="text-wrapper">
+                                <h3>Hôtel Le soleil du matin</h3>
+                                <p>Nuit à partir de <span>128€</span></p>
+                                <span class="vote">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="card card-popular">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                                <img src="/assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                     alt="Chambre de la maison d'hôte Au coeur de l'eau">
                             </div>
-                            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                            <p>Nuit à partir de <span>71€</span></p>
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="card card-popular">
-                        <a href="">
+                            <div class="text-wrapper">
+                                <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                                <p>Nuit à partir de <span>71€</span></p>
+                                <span class="vote">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star star-empty"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="card card-popular">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                                <img src="/assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                     alt="Chambre de l'hôtel Tout bleu et Blanc">
                             </div>
-                            <h3>Hôtel Tout bleu et Blanc</h3>
-                            <p>Nuit à partir de <span>68€</span></p>
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </span>
-                        </a>
-                    </div>
+                            <div class="text-wrapper">
+                                <h3>Hôtel Tout bleu et Blanc</h3>
+                                <p>Nuit à partir de <span>68€</span></p>
+                                <span class="vote">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star star-empty"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </section>
         </section>
@@ -230,7 +254,8 @@
                     <div class="card card-activities">
                         <a href="">
                             <div class="img-wrapper">
-                                <img src="/assets/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Paysage du Vieux Port">
+                                <img src="/assets/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                                    alt="Paysage du Vieux Port">
                             </div>
                             <h3>Vieux Port</h3>
                         </a>
@@ -238,7 +263,8 @@
                     <div class="card card-activities">
                         <a href="">
                             <div class="img-wrapper">
-                                <img src="/assets/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Paysage du Fort de Pomègues">
+                                <img src="/assets/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                                    alt="Paysage du Fort de Pomègues">
                             </div>
                             <h3>Fort de Pomègues</h3>
                         </a>
@@ -246,7 +272,8 @@
                     <div class="card card-activities">
                         <a href="">
                             <div class="img-wrapper">
-                                <img src="/assets/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Paysage des Iles du Frioul">
+                                <img src="/assets/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                                    alt="Paysage des Iles du Frioul">
                             </div>
                             <h3>Iles du Frioul</h3>
                         </a>
@@ -254,7 +281,8 @@
                     <div class="card card-activities">
                         <a href="">
                             <div class="img-wrapper">
-                                <img src="/assets/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Paysage du Parc National des Calanques">
+                                <img src="/assets/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                                    alt="Paysage du Parc National des Calanques">
                             </div>
                             <h3>Parc National des Calanques</h3>
                         </a>
@@ -262,7 +290,8 @@
                     <div class="card card-activities">
                         <a href="">
                             <div class="img-wrapper">
-                                <img src="/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Paysage de Notre-Dame-de-la-Garde">
+                                <img src="/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                                    alt="Paysage de Notre-Dame-de-la-Garde">
                             </div>
                             <h3>Notre-Dame-de-la-Garde</h3>
                         </a>
@@ -270,7 +299,8 @@
                     <div class="card card-activities">
                         <a href="">
                             <div class="img-wrapper">
-                                <img src="/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Paysage du Parc Longchamp">
+                                <img src="/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                                    alt="Paysage du Parc Longchamp">
                             </div>
                             <h3>Parc Longchamp</h3>
                         </a>
