--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="banner">
             <h1>
                 Trouvez votre hébergement pour des vacances de rêve
-                <div>En plein centre ville ou en pleine nature</div>
+                <span>En plein centre ville ou en pleine nature</span>
             </h1>
             <form>
                 <i class="fas fa-map-marker-alt clr-black"></i>
@@ -42,7 +42,6 @@
                 <button class="tag"><i class="fas fa-child"></i>familial</button>
                 <button class="tag"><i class="fas fa-heart"></i>romantique</button>
                 <button class="tag"><i class="fas fa-dog"></i>animaux autorisés</button>
-                </ul>
             </div>
             <p><i class="fas fa-info fa-sm"></i>Plus de 500 logements sont disponibles dans cette ville</p>
 
@@ -51,13 +50,13 @@
 
     <main>
         <!-- Hébergements / Lodging -->
-        <section id="lodging">
+        <div id="lodging">
             <!-- by town -->
             <section class="bloc bloc-city">
                 <h2>Hébergements à Marseille</h2>
                 <div class="cards">
-                    <div class="card card-city">
-                        <a href="">
+                    <a href="">
+                        <article class="card card-city">
                             <div class="img-wrapper">
                                 <img src="/assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                     alt="Chambre de l'auberge la Cannebière">
@@ -74,10 +73,10 @@
                                     <i class="fas fa-star star-empty"></i>
                                 </span>
                             </div>
-                        </a>
-                    </div>
-                    <div class="card card-city">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-city">
                             <div class="img-wrapper">
                                 <img src="/assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                     alt="Chambre de l'Hôtel du port">
@@ -94,10 +93,10 @@
                                     <i class="fas fa-star"></i>
                                 </span>
                             </div>
-                        </a>
-                    </div>
-                    <div class="card card-city">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-city">
                             <div class="img-wrapper">
                                 <img src="/assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                     alt="Chambre de l'hôtel Les mouettes">
@@ -114,10 +113,10 @@
                                     <i class="fas fa-star star-empty"></i>
                                 </span>
                             </div>
-                        </a>
-                    </div>
-                    <div class="card card-city">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-city">
                             <div class="img-wrapper">
                                 <img src="/assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                     alt="Chambre de l'Hôtel de la mer">
@@ -134,10 +133,10 @@
                                     <i class="fas fa-star star-empty"></i>
                                 </span>
                             </div>
-                        </a>
-                    </div>
-                    <div class="card card-city">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-city">
                             <div class="img-wrapper">
                                 <img src="/assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                     alt="Chambre de l'auberge Le Panier">
@@ -154,10 +153,10 @@
                                     <i class="fas fa-star star-empty"></i>
                                 </span>
                             </div>
-                        </a>
-                    </div>
-                    <div class="card card-city">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-city">
                             <div class="img-wrapper">
                                 <img src="/assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                     alt="Chambre de l'hôtel Amina">
@@ -174,8 +173,8 @@
                                     <i class="fas fa-star"></i>
                                 </span>
                             </div>
-                        </a>
-                    </div>
+                        </article>
+                    </a>
                 </div>
                 <button class="show-more">Afficher plus</button>
             </section>
@@ -186,7 +185,7 @@
 
                 <div class="cards">
                     <a href="">
-                        <div class="card card-popular">
+                        <article class="card card-popular">
                             <div class="img-wrapper">
                                 <img src="/assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                     alt="Chambre de l'hôtel Le soleil du matin">
@@ -202,10 +201,10 @@
                                     <i class="fas fa-star"></i>
                                 </span>
                             </div>
-                        </div>
+                        </article>
                     </a>
                     <a href="">
-                        <div class="card card-popular">
+                        <article class="card card-popular">
                             <div class="img-wrapper">
                                 <img src="/assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                     alt="Chambre de la maison d'hôte Au coeur de l'eau">
@@ -221,10 +220,10 @@
                                     <i class="fas fa-star star-empty"></i>
                                 </span>
                             </div>
-                        </div>
+                        </article>
                     </a>
                     <a href="">
-                        <div class="card card-popular">
+                        <article class="card card-popular">
                             <div class="img-wrapper">
                                 <img src="/assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                     alt="Chambre de l'hôtel Tout bleu et Blanc">
@@ -240,74 +239,74 @@
                                     <i class="fas fa-star star-empty"></i>
                                 </span>
                             </div>
-                        </div>
+                        </article>
                     </a>
                 </div>
             </section>
-        </section>
+        </div>
 
         <!-- Activités / Activities -->
-        <section id="activities">
-            <section class="bloc">
+        <div id="activities">
+            <section class="bloc bloc-activity">
                 <h2>Activités à Marseille</h2>
                 <div class="masonry">
-                    <div class="card card-activities">
-                        <a href="">
+                    <a href="">
+                        <article class="card card-activities">
                             <div class="img-wrapper">
                                 <img src="/assets/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                                     alt="Paysage du Vieux Port">
                             </div>
                             <h3>Vieux Port</h3>
-                        </a>
-                    </div>
-                    <div class="card card-activities">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-activities">
                             <div class="img-wrapper">
                                 <img src="/assets/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                                     alt="Paysage du Fort de Pomègues">
                             </div>
                             <h3>Fort de Pomègues</h3>
-                        </a>
-                    </div>
-                    <div class="card card-activities">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-activities">
                             <div class="img-wrapper">
                                 <img src="/assets/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                                     alt="Paysage des Iles du Frioul">
                             </div>
                             <h3>Iles du Frioul</h3>
-                        </a>
-                    </div>
-                    <div class="card card-activities">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-activities">
                             <div class="img-wrapper">
                                 <img src="/assets/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                                     alt="Paysage du Parc National des Calanques">
                             </div>
                             <h3>Parc National des Calanques</h3>
-                        </a>
-                    </div>
-                    <div class="card card-activities">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-activities">
                             <div class="img-wrapper">
                                 <img src="/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                                     alt="Paysage de Notre-Dame-de-la-Garde">
                             </div>
                             <h3>Notre-Dame-de-la-Garde</h3>
-                        </a>
-                    </div>
-                    <div class="card card-activities">
-                        <a href="">
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card card-activities">
                             <div class="img-wrapper">
                                 <img src="/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                     alt="Paysage du Parc Longchamp">
                             </div>
                             <h3>Parc Longchamp</h3>
-                        </a>
-                    </div>
+                        </article>
+                    </a>
                 </div>
             </section>
-        </section>
+        </div>
     </main>
 
     <footer>
