--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
                                     alt="Chambre de l'auberge la Cannebière">
                             </div>
                             <div class="text-wrapper">
-
                                 <h3>Auberge la Cannebière</h3>
                                 <p>Nuit à partir de <span class="low-price">25€</span></p>
                                 <span>
@@ -82,7 +81,6 @@
                                     alt="Chambre de l'Hôtel du port">
                             </div>
                             <div class="text-wrapper">
-
                                 <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de <span>52€</span></p>
                                 <span>
@@ -102,7 +100,6 @@
                                     alt="Chambre de l'hôtel Les mouettes">
                             </div>
                             <div class="text-wrapper">
-
                                 <h3>Hôtel Les mouettes</h3>
                                 <p>Nuit à partir de <span>76€</span></p>
                                 <span>
@@ -122,7 +119,6 @@
                                     alt="Chambre de l'Hôtel de la mer">
                             </div>
                             <div class="text-wrapper">
-
                                 <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de <span>46€</span></p>
                                 <span>
@@ -142,7 +138,6 @@
                                     alt="Chambre de l'auberge Le Panier">
                             </div>
                             <div class="text-wrapper">
-
                                 <h3>Auberge Le Panier</h3>
                                 <p>Nuit à partir de <span class="low-price">23€</span></p>
                                 <span>
@@ -162,7 +157,6 @@
                                     alt="Chambre de l'hôtel Amina">
                             </div>
                             <div class="text-wrapper">
-
                                 <h3>Hôtel chez Amina</h3>
                                 <p>Nuit à partir de <span>96€</span></p>
                                 <span>
@@ -256,7 +250,9 @@
                                 <img src="/assets/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                                     alt="Paysage du Vieux Port">
                             </div>
-                            <h3>Vieux Port</h3>
+                            <div class="text-wrapper">
+                                <h3>Vieux Port</h3>
+                            </div>
                         </article>
                     </a>
                     <a href="">
@@ -265,7 +261,9 @@
                                 <img src="/assets/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                                     alt="Paysage du Fort de Pomègues">
                             </div>
-                            <h3>Fort de Pomègues</h3>
+                            <div class="text-wrapper">
+                                <h3>Fort de Pomègues</h3>
+                            </div>
                         </article>
                     </a>
                     <a href="">
@@ -274,7 +272,9 @@
                                 <img src="/assets/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                                     alt="Paysage des Iles du Frioul">
                             </div>
-                            <h3>Iles du Frioul</h3>
+                            <div class="text-wrapper">
+                                <h3>Iles du Frioul</h3>
+                            </div>
                         </article>
                     </a>
                     <a href="">
@@ -283,7 +283,9 @@
                                 <img src="/assets/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                                     alt="Paysage du Parc National des Calanques">
                             </div>
-                            <h3>Parc National des Calanques</h3>
+                            <div class="text-wrapper">
+                                <h3>Parc National des Calanques</h3>
+                            </div>
                         </article>
                     </a>
                     <a href="">
@@ -292,7 +294,9 @@
                                 <img src="/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                                     alt="Paysage de Notre-Dame-de-la-Garde">
                             </div>
-                            <h3>Notre-Dame-de-la-Garde</h3>
+                            <div class="text-wrapper">
+                                <h3>Notre-Dame-de-la-Garde</h3>
+                            </div>
                         </article>
                     </a>
                     <a href="">
@@ -301,7 +305,9 @@
                                 <img src="/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                     alt="Paysage du Parc Longchamp">
                             </div>
-                            <h3>Parc Longchamp</h3>
+                            <div class="text-wrapper">
+                                <h3>Parc Longchamp</h3>
+                            </div>
                         </article>
                     </a>
                 </div>
