--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </h1>
             <form>
                 <i class="fas fa-map-marker-alt clr-black"></i>
-                <input class="city" type="search" placeholder="Marseille, France" aria-label="Rechercher une ville" />
+                <input class="city" type="text" placeholder="Marseille, France" aria-label="Rechercher une ville" />
                 <button type="button" class="search">Rechercher</button>
                 <button type="button" class="search-icon"><i class="fas fa-search fa-lg"></i></button>
             </form>
