--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                             </article>
                         </a>
                     </div>
-                    <div class="pattern-3-cards-inverted">
+                    <div class="pattern-3-cards pattern-3-cards-inverted">
                         <a class="big card card-activities" href="">
                             <article>
                                 <div class="img-wrapper">
