Adding meta description

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         Réservia - Trouvez le meilleur hébergement et des activités pour vos
         vacances
     </title>
+    <meta name="description" content="Nous vous aidons à planifier vos vacances ! Avec Réservia, trouvez le meilleur hébergement et diverses activités dans la ville de votre choix.">
     <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" /> 
 </head>
 
 <body>
